# bot

Interfaces/arm_control_interfaces/action/: MoveArm.action
Interfaces/claw_control_interfaces/action/: MoveClaw.action
Interfaces/object_detection_interfaces/: CMakeLists.txt  package.xml
Interfaces/object_detection_interfaces/msg/: DetectionResult.msg
Interfaces/object_detection_interfaces/srv/: EnableDetection.srv
Interfaces/robot_control_interfaces/: CMakeLists.txt  package.xml
Interfaces/robot_control_interfaces/action/: ManipulateObject.action
Interfaces/yolo_detection_interfaces/: CMakeLists.txt  package.xml
Interfaces/yolo_detection_interfaces/msg/: YoloDetection.msg
Nodes/arm_action_rclpy/: package.xml  setup.cfg
Nodes/arm_action_rclpy/arm_action_rclpy/: action_control_01.py  arm.py
Nodes/bottom_camera_yolo_detector/: package.xml  setup.cfg  setup.py
Nodes/bottom_camera_yolo_detector/bottom_camera_yolo_detector/: yolo_detector_node.py
Nodes/bottom_camera_yolo_detector/launch/: yolo_detector.launch.py
Nodes/chassis_control_rclpy/chassis_control_rclpy/: chassis.py  chassis_control_node.py
Nodes/claw_action_rclpy/: package.xml  setup.py
Nodes/claw_action_rclpy/claw_action_rclpy/: claw.py
Nodes/dual_camera_pkg/: package.xml  setup.py
Nodes/dual_camera_pkg/config/: bottom_camera.yaml  top_camera.yaml
Nodes/dual_camera_pkg/dual_camera_pkg/: bottom_camera_node.py  camera_preview_node.py  top_camera_node.py
Nodes/dual_camera_pkg/launch/: dual_cameras.launch.py  preview_cameras.launch.py
Nodes/fishbot_cartographer/: package.xml
Nodes/fishbot_cartographer/config/: fishbot_2d.lua
Nodes/fishbot_cartographer/launch/: cartographer.launch.py
Nodes/fishbot_navigation2/: package.xml
Nodes/fishbot_navigation2/maps/: 这个目录应该放这些地图文件.txt
Nodes/fishbot_navigation2/param/: fishbot_nav2.yaml
Nodes/lidar_filter_pkg/: package.xml  setup.cfg  setup.py
Nodes/object_detection/object_detection/: __init__.py  object_detection_node.py
Nodes/odom_imu_publisher/odom_imu_publisher/: odom_imu_node.py
Nodes/oradar_ros/install/: setup.sh
Nodes/oradar_ros/install/oradar_lidar/share/oradar_lidar/: package.bash  package.ps1  package.zsh
Nodes/oradar_ros/launch/: ms200_scan.launch.py
Nodes/oradar_ros/log/: latest_build
Nodes/oradar_ros/rviz2/: oradar_scan.rviz
Nodes/robot_control/: package.xml  setup.py
Nodes/robot_control/launch/: robot_control.launch.py
Nodes/robot_control/robot_control/: robot_control_node.py
Nodes/sam_bot_description/: package.xml
Nodes/sensor_fusion_pkg/: README.md
Nodes/sensor_fusion_pkg/config/: ekf_config.yaml
Nodes/sensor_fusion_pkg/launch/: sensor_fusion.launch.py
Nodes/task_manager/: package.xml  setup.py
Nodes/task_manager/launch/: task_manager.launch.py
Nodes/task_manager/task_manager/: task_manager_node.py
arm_action_rclpy/: setup.py
arm_action_rclpy/arm_action_rclpy/: action_arm_01.py
arm_control_interfaces/: CMakeLists.txt  package.xml
chassis_control_rclpy/: package.xml  setup.cfg  setup.py
chassis_control_rclpy/chassis_control_rclpy/: chassis_control_node.py
claw_action_rclpy/: setup.cfg
claw_action_rclpy/claw_action_rclpy/: action_claw_01.py  action_control_01.py
claw_control_interfaces/: CMakeLists.txt  package.xml
dual_camera_pkg/: setup.cfg  setup.py
dual_camera_pkg/dual_camera_pkg/: bottom_camera_node.py
dual_camera_pkg/launch/: dual_cameras.launch.py  preview_cameras.launch.py
fishbot_cartographer/: CMakeLists.txt
fishbot_navigation2/: CMakeLists.txt
lidar_filter_pkg/lidar_filter_pkg/: lidar_filter_node.py
object_detection/: package.xml  setup.py
object_detection/launch/: object_detection.launch.py
object_detection/object_detection/: object_detection_node.py
object_detection/resource/: object_detection
odom_imu_publisher/: package.xml  setup.cfg  setup.py
odom_imu_publisher/odom_imu_publisher/: odom_imu_node.py
oradar_ros/install/: local_setup.sh
oradar_ros/install/oradar_lidar/lib/oradar_lidar/: oradar_scan
oradar_ros/install/oradar_lidar/share/oradar_lidar/: package.dsv  package.sh
sam_bot_description/launch/: display.launch.py
sam_bot_description/src/description/: sam_bot_description.urdf
sensor_fusion_pkg/: CMakeLists.txt  package.xml
